--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,34 @@
 /*  your css code here. If applicable */
+body{
+	background-color: rgb(204, 204, 204);
+}
+ul{
+	border: 2px solid black;
+    background-color: white;
+	padding: 20px;
+	border-radius: 5px;
+	margin-left: 20px;
+	margin-right: 20px;
+}
+.video{
+	
+	border: 2px solid black;
+    background-color: white;
+	padding: 20px;
+	border-radius: 5px;
+	margin-left: 20px;
+	margin-right: 20px;
+}
+
+h1{
+	text-align: center;
+}
+h2{
+	text-align: center;
+}
+li{
+	list-style-type: none;
+}
+a{
+	text-decoration-line: none;
+}
