--- a/styles.css
+++ b/styles.css
@@ -1,27 +1,8 @@
-/*  your css code here. If applicable */
 body{
-	background-color: rgb(204, 204, 204);
+	background-color: rgb(204, 204, 204)
 }
-ul{
-	border: 2px solid black;
-    background-color: white;
-	padding: 20px;
-	border-radius: 5px;
-	margin-left: 20px;
-	margin-right: 20px;
-}
-.video{
-	
-	border: 2px solid black;
-    background-color: white;
-	padding: 20px;
-	border-radius: 5px;
-	margin-left: 20px;
-	margin-right: 20px;
-}
-
 h1{
-	text-align: center;
+	text-align: center:
 }
 h2{
 	text-align: center;
@@ -29,6 +10,11 @@ h2{
 li{
 	list-style-type: none;
 }
-a{
+[target:_blank]{
 	text-decoration-line: none;
 }
+	.player_one/.player_two{
+	background-color: rgb(255, 255, 255); 
+		padding:  
+		border-radius: 
+	}
