--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,17 @@
 body{
 	background-color: rgb(204, 204, 204)
 }
-h1{
-	text-align: center:
-}
 h2{
 	text-align: center;
 }
-li{
+ul{
 	list-style-type: none;
 }
-[target:_blank]{
+a{
 	text-decoration-line: none;
 }
 	.player_one/.player_two{
 	background-color: rgb(255, 255, 255); 
-		padding:  
-		border-radius: 
+		padding: 10px;
+		border-radius: 5px;
 	}
