--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,8 @@ ul{
 a{
 	text-decoration-line: none;
 }
-	.player_one/.player_two{
+	.player_one, 
+.player_two{
 	background-color: rgb(255, 255, 255); 
 		padding: 10px;
 		border-radius: 5px;
